[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy/EnemyBase.gd" type="Script" id=1]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/State.gd" type="Script" id=3]
[ext_resource path="res://Enemy/normal.tres" type="Material" id=4]

[sub_resource type="CapsuleMesh" id=2]
material = ExtResource( 4 )
radius = 0.5
mid_height = 0.5

[sub_resource type="CapsuleShape" id=3]
radius = 0.391661
height = 0.5

[sub_resource type="CylinderShape" id=4]
radius = 2.0

[sub_resource type="Animation" id=5]
resource_name = "enemyHit"
tracks/0/type = "value"
tracks/0/path = NodePath("body:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0666667, 0.0666667, 0.145098, 1 ), Color( 1, 0.988235, 0.945098, 1 ), Color( 0.0666667, 0.0666667, 0.145098, 1 ) ]
}

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 2 )]

[node name="Detection" type="Area" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Detection"]
shape = SubResource( 4 )

[node name="State" type="Node" parent="."]
script = ExtResource( 3 )

[node name="onshot_cooldown" type="Timer" parent="."]
one_shot = true

[node name="AIFinding" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemyHit = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]
[connection signal="death" from="Stats" to="." method="_on_Stats_death"]
[connection signal="hit" from="Stats" to="." method="_on_Stats_hit"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="timeout" from="onshot_cooldown" to="." method="_on_attackcooldown_timeout"]
[connection signal="timeout" from="AIFinding" to="." method="_on_AIFinding_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
